tests/lex-fail/unknown_cp.fl.0.exp
Error: unknown_cp.fl(1,1): Encountered unknown code point: £
£
^ 
